# object_recognition_ros

src/info_cache/: CMakeLists.txt
src/io/: CMakeLists.txt
